[gd_scene load_steps=6 format=3 uid="uid://uu4ij08ndvs5"]

[ext_resource type="Script" uid="uid://lxjry81wwgfn" path="res://barkley2/scenes/_utilityStation/dna_balls_utility.gd" id="1_b5f6a"]
[ext_resource type="PackedScene" uid="uid://bwlax2dna7kaa" path="res://barkley2/scenes/_utilityStation/dna_ball_link.tscn" id="1_eegnd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dxouk"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0, 0, 0, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_wb8ja"]
sky_material = SubResource("ProceduralSkyMaterial_dxouk")

[sub_resource type="Environment" id="Environment_bfnx0"]
background_mode = 2
sky = SubResource("Sky_wb8ja")
tonemap_mode = 2
glow_enabled = true

[node name="balls_utility" type="Node3D"]
script = ExtResource("1_b5f6a")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bfnx0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
directional_shadow_mode = 0

[node name="ball_link21" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.556874, 0.830597, 0, -0.830597, -0.556874, 0, 0, 0, 1, 0, 0, 4.05)
spin = true
enable_link = false
rotate_offset = 0.1

[node name="ball_link11" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.109541, 0.993981, 0, -0.993981, 0.109541, 0, 0, 0, 1, 0, 0, 3.6)
spin = true
rotate_offset = 0.2

[node name="ball_link12" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.724299, 0.689485, 0, -0.689485, 0.724299, 0, 0, 0, 1, 0, 0, 3.15)
spin = true
enable_link = false
rotate_offset = 0.3

[node name="ball_link13" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.998187, 0.060181, 0, -0.060181, 0.998187, 0, 0, 0, 1, 0, 0, 2.7)
spin = true
rotate_offset = 0.4

[node name="ball_link14" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.803248, -0.595645, 0, 0.595645, 0.803248, 0, 0, 0, 1, 0, 0, 2.25)
spin = true
enable_link = false
rotate_offset = 0.5

[node name="ball_link15" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.230383, -0.973099, 0, 0.973099, 0.230383, 0, 0, 0, 1, 0, 0, 1.8)
spin = true
rotate_offset = 0.6

[node name="ball_link16" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.451127, -0.892459, 0, 0.892459, -0.451127, 0, 0, 0, 1, 0, 0, 1.35)
spin = true
enable_link = false
rotate_offset = 0.7

[node name="ball_link17" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.920128, -0.391618, 0, 0.391618, -0.920128, 0, 0, 0, 1, 0, 0, 0.9)
spin = true
rotate_offset = 0.8

[node name="ball_link18" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.955963, 0.293481, 0, -0.293481, -0.955963, 0, 0, 0, 1, 0, 0, 0.45)
spin = true
enable_link = false
rotate_offset = 0.9

[node name="ball_link19" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.541726, 0.840554, 0, -0.840554, -0.541726, 0, 0, 0, 1, 0, 0, 0)
spin = true
rotate_offset = 1.0

[node name="ball_link20" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.127601, 0.991825, 0, -0.991825, 0.127601, 0, 0, 0, 1, 0, 0, -0.45)
spin = true
enable_link = false
rotate_offset = 1.1

[node name="ball_link" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.737007, 0.675883, 0, -0.675883, 0.737007, 0, 0, 0, 1, 0, 0, -0.9)
spin = true
rotate_offset = 1.2

[node name="ball_link2" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.999147, 0.0412848, 0, -0.0412848, 0.999147, 0, 0, 0, 1, 0, 0, -1.35)
spin = true
enable_link = false
rotate_offset = 1.3

[node name="ball_link3" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.791871, -0.610686, 0, 0.610686, 0.791871, 0, 0, 0, 1, 0, 0, -1.8)
spin = true
rotate_offset = 1.4

[node name="ball_link4" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.212111, -0.977245, 0, 0.977245, 0.212111, 0, 0, 0, 1, 0, 0, -2.25)
spin = true
enable_link = false
rotate_offset = 1.5

[node name="ball_link5" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.467824, -0.883822, 0, 0.883822, -0.467824, 0, 0, 0, 1, 0, 0, -2.7)
spin = true
rotate_offset = 1.6

[node name="ball_link6" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.927395, -0.374083, 0, 0.374083, -0.927395, 0, 0, 0, 1, 0, 0, -3.15)
spin = true
enable_link = false
rotate_offset = 1.7

[node name="ball_link7" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.95024, 0.311516, 0, -0.311516, -0.95024, 0, 0, 0, 1, 0, 0, -3.6)
spin = true
rotate_offset = 1.8

[node name="ball_link8" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(-0.52583, 0.850588, 0, -0.850588, -0.52583, 0, 0, 0, 1, 0, 0, -4.05)
spin = true
enable_link = false
rotate_offset = 1.9

[node name="ball_link9" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.146222, 0.989252, 0, -0.989252, 0.146222, 0, 0, 0, 1, 0, 0, -4.5)
spin = true
rotate_offset = 2.0

[node name="ball_link10" parent="." instance=ExtResource("1_eegnd")]
transform = Transform3D(0.749381, 0.662139, 0, -0.662139, 0.749381, 0, 0, 0, 1, 0, 0, -4.95)
spin = true
enable_link = false
rotate_offset = 2.1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 0, -0.45)
keep_aspect = 0
projection = 1
size = 9.9
