extends Node3D

@onready var ball_array := [
	$ball_link21, $ball_link11, $ball_link12, $ball_link13, $ball_link14, $ball_link15, $ball_link16, $ball_link17, $ball_link18, $ball_link19, $ball_link20, $ball_link, $ball_link2, $ball_link3, $ball_link4, $ball_link5, $ball_link6, $ball_link7, $ball_link8, $ball_link9, $ball_link10
]
